# uhdm-pypi

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: build.yml
scripts/: CMakeLists.txt  build.sh  update.sh
scripts/python/: CMakeLists.txt
